# taidoton-2024

./: .gitignore  README.md  docker-compose.yaml  mock_data.csv  nginx.conf  package-lock.json  package.json
analysis/: extract_email.py  extract_slack.py  pyproject.toml  seed.py
analysis/data/email/: generated_mock_data.csv  harmonia_tech.csv  taidot_on.csv
analysis/data/slack/: canvases.json  channels.json
analysis/data/slack/all-taidoton/: 2024-11-09.json  canvas_in_the_conversation.json
analysis/data/slack/junccari-2024-mega-potti-winners-8/: 2024-11-09.json  canvas_in_the_conversation.json
analysis/data/slack/social/: 2024-11-09.json  canvas_in_the_conversation.json
analysis/data/slack/täysin-anonyymi-palautelaatikko/: 2024-11-09.json
analysis/data/slack_old/: users.json
analysis/data/slack_old/all-taidoton/: 2024-11-09.json  canvas_in_the_conversation.json
analysis/data/slack_old/junccari-2024-mega-potti-winners-8/: 2024-11-09.json  canvas_in_the_conversation.json
analysis/data/slack_old/social/: 2024-11-09.json
analysis/results/: email_analysis_result.json  email_analysis_result_harmonia_tech.json  email_analysis_result_taidot_on.json  parsed_slack_messages.json  slack_analysis_result.json
client/: Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  api.d.ts  index.tsx
client/src/common/: api.ts  theme.ts
client/src/components/: Button.tsx  Chip.tsx  (+7 more)
server/: db.json  index.ts  package-lock.json  package.json  tsconfig.json
server/sandrahihii/: emailData.csv  getAnalysis.ts
(+13 files in other folders)
